fixed bug thin gap and label no longer splits

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ nav {
 	height: 200px;
 }
 
+.navbar {
+        width: 100%;
+}
+
 .navbar-brand {
 	margin-left: 50px;
 }
@@ -254,7 +258,7 @@ nav {
 	background-color: rgba(0, 0, 0, 0.5)
 }
 
-#form-box h1 {
+#form-box h2 {
 	text-align: center;
 }
 
@@ -424,6 +428,13 @@ footer {
 @media screen and (max-width: 1400px) {
 	#form-box {
 		width: 95%;
+	}
+}
+
+@media screen and (max-width: 757px) {
+	.form-radio {
+	        display: block;
+		margin-bottom: 20px;
 	}
 }
 
